[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-common"
version = "0.1.0"
description = "Common ML utilities, dataloaders, and training utilities for deep learning projects"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Felix Yu" }]
dependencies = [
    "torch>=2.1",
    "numpy>=1.22",
    "tqdm>=4.65",
    "pyyaml>=6.0",
    "pandas>=1.5",
    "polars>=0.18",
    "pyarrow>=12.0",
]

[tool.setuptools]
packages = { find = { where = ["."] } }

[tool.setuptools.package-data]
ml_common = ["py.typed"]